tui/src/snapshots/codex_tui__global_gitignore_prompt__tests__global_gitignore_prompt_setup_1_of_2_vt100.snap
---
source: tui/src/global_gitignore_prompt.rs
expression: terminal.backend().vt100().screen().contents()
---
  Setup 1/2                                                                     

  Add .codexpotter/ to your global gitignore file ~/.config/git/ignore?

  This keeps your CodexPotter projects private and prevents accidental commits. 

  › 1. Yes, add to global gitignore
    2. No
    3. No, don't ask me again

  Press enter to continue
